browsers/asc/deploy/asc-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asc-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: asc-browser-https
    ingress.gcp.kubernetes.io/pre-shared-cert: asc-2020
spec:
  rules:
  - host: asc.broadinstitute.org
    http:
      paths:
      - path:
        backend:
          serviceName: asc-browser-nodeport
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: asc-browser-nodeport
  labels:
    state: serving
spec:
  type: NodePort
  selector:
    name: asc-browser
  ports:
  - port: 80
    targetPort: 80
